Edited wiki page through web user interface.

--- a/wiki/Translate.wiki
+++ b/wiki/Translate.wiki
@@ -13,3 +13,7 @@ For each translation a .lng file must be created. This file contains about 5000 
 http://gf-ptf.googlecode.com/files/PTFTranslate.png
 
 For more details, see the pdf that is included in the [VersionHistory download].
+
+
+=== Or watch this instruction video: ===
+<wiki:video url="http://www.youtube.com/watch?v=qQUCtgUDd4I"/>
