--- a/wiki/CustomSensors.wiki
+++ b/wiki/CustomSensors.wiki
@@ -16,6 +16,7 @@ http://gf-ptf.googlecode.com/files/PRTGToolsFamily_65x119.png
 ||[#EmailCount EmailCount]||1.0.2.1||06/08/2009||[http://prtg7addons.googlecode.com/files/PTF.EmailCount.zip here]||
 ||[#INIFileValue INIFileValue]||1.0.1.1||16/11/2009||[http://prtg7addons.googlecode.com/files/PTF.INIFileValue.zip here]||
 ||[#PingWarning PingWarning]||1.0.2.1||30/11/2009||[http://prtg7addons.googlecode.com/files/PTF.PingWarning.zip here]||
+||[#CSVExport CSVExport]||1.0.1.1||16/12/2009||[http://prtg7addons.googlecode.com/files/PTF.CSVExport.zip here]||
 
 == Overview ==
 http://gf-ptf.googlecode.com/files/CustomSensors.png
@@ -180,4 +181,19 @@ or
 ====1.0.2.1 _30/11/2009_====
  * Added the ICMP error number to the sensor status output
 ====1.0.1.1 _16/11/2009_====
+ * First public version
+
+----
+
+== CSVExport ==
+=== Summary ===
+This sensor exports the data of a sensor to a .csv file.
+{{{
+-pu=demo -pp=demodemo -ps=https://prtg.paessler.com -s=2008
+}}}
+
+ back to [#Latest_versions: top]
+
+=== Version history ===
+====1.0.1.1 _16/12/2009_====
  * First public version
