Edited wiki page through web user interface.

--- a/wiki/KrijcoWikiSidebar.wiki
+++ b/wiki/KrijcoWikiSidebar.wiki
@@ -5,18 +5,18 @@ http://gf-ptf.googlecode.com/files/PRTGToolsFamily_65x119.png
 
  ----
 
-====[PRTG_Tools_by_Gerard_Feijth Home]====
+===[PRTG_Tools_by_Gerard_Feijth Home]===
 
- * ====[TrayNotifier]====
- * ====[NotifierGadget]====
- * ====[NotifierGadgetXP]====
- * ====[NotifierCE]====
- * ====[NotifierProxy]====
- * ====[Distribution Distribution tool]====
- * ====[Translate Translation tool]====
- * ====[Mapdesigner Map Designer]====
- * ====[CustomSensors Custom Sensors]====
- * ====[DistributeSensors Distribute Sensors]====
+ * ===[TrayNotifier]===
+ * ===[NotifierGadget]===
+ * ===[NotifierGadgetXP]===
+ * ===[NotifierCE]===
+ * ===[NotifierProxy]===
+ * ===[Distribution Distribution tool]===
+ * ===[Translate Translation tool]===
+ * ===[Mapdesigner Map Designer]===
+ * ===[CustomSensors Custom Sensors]===
+ * ===[DistributeSensors Distribute Sensors]===
 
 
  ----
