--- a/wiki/CustomSensors.wiki
+++ b/wiki/CustomSensors.wiki
@@ -11,7 +11,7 @@ http://gf-ptf.googlecode.com/files/PRTGToolsFamily_65x119.png http://gf-ptf.goog
 ||[#FTPFileCount FTPFileCount]||1.0.2.1||06/08/2009||[http://prtg7addons.googlecode.com/files/PTF.FTPFileCount.zip here]||
 ||[#NetworkFileCount NetworkFileCount]||1.0.2.1||06/08/2009||[http://prtg7addons.googlecode.com/files/PTF.NetworkFileCount.zip here]||
 ||[#LogFileReader LogFileReader]||1.0.2.1||06/08/2009||[http://prtg7addons.googlecode.com/files/PTF.LogfileReader.zip here]||
-||[#EmailCount EmailCount]||1.0.2.1||06/08/2009||[http://prtg7addons.googlecode.com/files/PTF.EmailCount.zip here]||
+||[#EmailCount EmailCount]||1.0.3.1||30/12/2009||[http://prtg7addons.googlecode.com/files/PTF.EmailCount.zip here]|| http://gf-ptf.googlecode.com/files/Arrow_Updated_50.png ||
 ||[#INIFileValue INIFileValue]||1.0.1.1||16/11/2009||[http://prtg7addons.googlecode.com/files/PTF.INIFileValue.zip here]||
 ||[#PingWarning PingWarning]||1.0.2.1||30/11/2009||[http://prtg7addons.googlecode.com/files/PTF.PingWarning.zip here]||
 ||[#CSVExport CSVExport]||1.0.2.1||28/12/2009||[http://prtg7addons.googlecode.com/files/PTF.CSVExport.zip here]|| http://gf-ptf.googlecode.com/files/Arrow_Updated_50.png ||
@@ -138,6 +138,14 @@ or
  back to [#Latest_versions: top]
 
 === Version history ===
+====1.0.3.1 _30/12/2009_====
+ * New: added the following optional parameters:
+{{{
+-t=   timeout in seconds. Default = 10 sec.
+-to=  only count emails send to this address.	
+-fr=  only count emails send from this address.
+-su=  only count emails with the subject containing this string.
+}}}
 ====1.0.2.1 _06/08/2009_====
  * Added support for the passhash (scrambled password to be generated with the PTF PassHash Tool)
 ====1.0.1.1 _12/07/2009_====
@@ -195,10 +203,13 @@ More [CSVExportSensor details]
 
 === Version history ===
 ====1.0.2.1 _28/12/2009_==== 
- * New: added the -co switch to combine the data of multiple sensor into one file.
- * New: added the -nh switch to ommit the column header line in a .csv export file.
- * New: added the -ns switch to ommit the summary line in a .csv export file.
- * New: added the -id switch to list the object ID in an export file.
+ * New: added the following optional parameters:
+{{{
+-co switch to combine the data of multiple sensor into one file.
+-nh switch to ommit the column header line in a .csv export file.
+-ns switch to ommit the summary line in a .csv export file.
+-id switch to list the object ID in an export file.
+}}}
  * Changed: the CSVExport version number is now included in the .xml export file
 ====1.0.1.1 _16/12/2009_====
  * First public version
